--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,8 @@
     <script src="app/lib/select/ionic-modal-select.min.js"></script>
     <script src="app/lib/datetimepicker/ion-datetime-picker.min.js"></script>
     <script src="app/lib/floatingmenu/ion-floating-menu.min.js"></script>
+    <script src="app/lib/time-ago/angular-timeago.min.js"></script>
+    <script src="app/lib/ngStorage/ngStorage.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -32,6 +34,9 @@
     <script src="app/controllers/UsersCtrl.js"></script>
     <script src="app/controllers/NotePad.js"></script>
     <script src="app/services/HTSservices.js"></script>
+    <script src="app/controllers/NewsCtrl.js"></script>
+    <script src="app/controllers/EventsCtrl.js"></script>
+    <script src="app/controllers/iWitnessCtrl.js"></script>
   </head>
 
   <body ng-app="HezecomApp">
